--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -4,9 +4,10 @@
 
 <% content_for :main do %>
   <ul>
-    <li><%= link_to 'Events', admin_events_path %></li>
-    <li><%= link_to 'Locations', admin_locations_path %></li>
-    <li><%= link_to 'Observations', admin_observations_path %></li>
-    <li><%= link_to 'Processes', admin_processes_path %></li>
+    <li><%= link_to 'Manage Events', admin_events_path %></li>
+    <li><%= link_to 'Manage Locations', admin_locations_path %></li>
+    <li><%= link_to 'Manage Processes', admin_processes_path %></li>
+    <li><%= link_to 'Manage Citations', admin_citations_path %></li>
+    <li><%= link_to 'Manage Observations', admin_observations_path %></li>
   </ul>
 <% end -%>
