--- a/app/assets/stylesheets/admin/form.css.scss
+++ b/app/assets/stylesheets/admin/form.css.scss
@@ -28,7 +28,8 @@ div.form {
     dd { width: 450px; }
     label { cursor: pointer; }
     label.required { background: url(/assets/required.png) no-repeat right 0; padding: 0 15px 0 0; }
-    input, textarea, select { padding: 5px; border: 1px solid #CCC; width: 430px; }
+    input[type="text"], input[type="password"], input[type="email"], textarea { padding: 5px; border: 1px solid #CCC; width: 430px; }
+    select { padding: 5px; border: 1px solid #CCC; width: 440px; }
     div.error_description { color: #900; margin: 0 0 10px; }
     div.field_with_errors {
       display: inline;
