--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -3,11 +3,28 @@
 <% end -%>
 
 <% content_for :main do %>
-  <ul>
-    <li><%= link_to 'Manage Events', admin_events_path %></li>
-    <li><%= link_to 'Manage Locations', admin_locations_path %></li>
-    <li><%= link_to 'Manage Processes', admin_processes_path %></li>
-    <li><%= link_to 'Manage Citations', admin_citations_path %></li>
-    <li><%= link_to 'Manage Observations', admin_observations_path %></li>
-  </ul>
+  <section>
+    <h2>Configuration</h2>
+    <ul>
+      <li><%= link_to 'Manage Events', admin_events_path %></li>
+      <li><%= link_to 'Manage Locations', admin_locations_path %></li>
+      <li><%= link_to 'Manage Processes', admin_processes_path %></li>
+    </ul>
+  </section>
+  
+  <section>
+    <h2>Observations</h2>
+    <ul>
+      <li><%= link_to 'Manage Citations', admin_citations_path %></li>
+      <li><%= link_to 'Manage Observations', admin_observations_path %></li>
+    </ul>
+  </section>
+  
+  <section>
+    <h2>Administration</h2>
+    <ul>
+      <li><%= link_to 'Manage Users', admin_users_path %></li>
+    </ul>
+  </section>
+
 <% end -%>
