--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,6 +1,13 @@
 <%= f.text_field_control @event, :name %>
+
 <%= f.text_field_control @event, :code %>
+
 <%= f.text_field_control @event, :scale %>
+
 <%= f.text_area_control @event, :description, {}, { :rows => 5 } %>
-<% options = options_from_collection_for_select(Location.order("name ASC").find(:all), :id, :name, @event.location_id) %>
-<%= f.select_control @event, :location_id, { :class => 'required' }, { :include_blank => '', :options => options } %>
+
+<dt><%= f.label :in_model, "In Model?" %></dt>
+<dd><%= f.check_box :in_model %></dd>
+
+<% options = options_from_collection_for_select(Location.order("name ASC").all, :id, :name, @event.location_id) %>
+<%= f.select_control @event, :location_id, {}, { :include_blank => '', :options => options } %>
