--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,14 +1,14 @@
 <% content_for :breadcrumbs do -%>
   <%= link_to 'Dashboard', admin_dashboard_path %> &raquo;
   <%= link_to 'Events', admin_events_path %> &raquo;
-  <strong>New Event</strong>
+  <strong>Edit Event</strong>
 <% end -%>
 
 <% content_for :main do %>
-  <%= form_for @event, { :url => admin_events_path } do |f| -%>
+  <%= form_for @event, { :url => admin_event_path(@event) } do |f| -%>
     <div class="form" id="new_event">
       <div class="form-header">
-        <h2>event Details</h2>
+        <h2>Event Details</h2>
       </div>
       <div class="form-body">
         <dl>
@@ -18,8 +18,7 @@
       <div class="form-footer">
         <ul>
           <li><%= link_to 'Cancel', admin_events_path, :class => 'cancel' %></li>
-          <li><%= f.submit 'Save and Finish', :class => 'button' %></li>
-          <li><%= f.submit 'Save and Continue', :class => 'button' %></li>
+          <li><%= f.submit 'Save', :class => 'button' %></li>
         </ul>
       </div>
     </div>
