--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,35 +1,33 @@
 <% content_for :breadcrumbs do -%>
   <%= link_to 'Dashboard', admin_dashboard_path %> &raquo;
-  <strong>Events</strong>
+  <strong>Users</strong>
 <% end -%>
 
 <% content_for :main do %>
   <div class="grid">
     <div class="grid-header">
-      <h2>Events</h2>
+      <h2>Users</h2>
       <ul>
-        <li><%= link_to "+ Add New", new_admin_event_path %></li>
+        <li><%= link_to "+ Add New", new_admin_user_path %></li>
       </ul>
     </div>
     <div class="grid-body">
       <table>
         <thead>
           <tr>
-            <th>Event</th>
-            <th>Code</th>
+            <th>User</th>
           </tr>
         </thead>
         <tbody>
-          <% unless @events.empty? %>
-            <% @events.each do |event| -%>
+          <% unless @users.empty? %>
+            <% @users.each do |user| -%>
               <tr class="<%= cycle('odd', 'even') %>">
-                <td><%= link_to event.name, edit_admin_event_path(event) %></td>
-                <td><%= event.code %></td>
+                <td><%= link_to user.full_name, edit_admin_user_path(user) %></td>
               </tr>
             <% end -%>
           <% else -%>
             <tr>
-              <td colspan="2">There are no events</td>
+              <td>There are no users</td>
             </tr>
           <% end -%>
         </tbody>
