--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Translatingtime</title>
+  <title>Translating Time</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -13,18 +13,21 @@
   <% if user_signed_in? -%>
     <presence>
       <strong><%= current_user.full_name -%></strong>
-      <%= link_to 'Sign Out', destroy_user_session_path %>
+      <ul>
+        <li><%= link_to 'Settings', user_session_path %></li>
+        <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
+      </ul>
+      
     </presence>
   <% end -%>
 </header>
 
-<% unless yield(:breadcrumbs).blank? %>
-  <breadcrumbs>
-    <%= yield :breadcrumbs %>
-  </breadcrumbs>
-<% end %>
-
 <application>
+  <% unless yield(:breadcrumbs).blank? %>
+    <breadcrumbs>
+      <%= yield :breadcrumbs %>
+    </breadcrumbs>
+  <% end %>
   <%= render '/layouts/flash' %>
   <div class="main">
     <div class="inner">
