--- a/app/assets/stylesheets/admin/layout.css.scss
+++ b/app/assets/stylesheets/admin/layout.css.scss
@@ -15,10 +15,10 @@ header {
 }
 
 breadcrumbs {
-  display: block; padding: 5px 0; font-size: 11px;
+  display: block; padding: 10px 20px 0; font-size: 11px;
 }
 application {
-  display: block; padding: 0 20px 20px; width: 960px;
+  display: block; padding: 20px; width: 960px;
 }
 section {
   margin: 0 0 10px;
