--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -8,7 +8,9 @@
     <ul>
       <li><%= link_to 'Manage Events', admin_events_path %></li>
       <li><%= link_to 'Manage Locations', admin_locations_path %></li>
+      <li><%= link_to 'Manage Methods', admin_methods_path %></li>
       <li><%= link_to 'Manage Processes', admin_processes_path %></li>
+      <li><%= link_to 'Manage Species', admin_species_index_path %></li>
     </ul>
   </section>
   
