--- a/app/views/admin/species/index.html.erb
+++ b/app/views/admin/species/index.html.erb
@@ -1,33 +1,33 @@
 <% content_for :breadcrumbs do -%>
   <%= link_to 'Dashboard', admin_dashboard_path %> &raquo;
-  <strong>Events</strong>
+  <strong>Species</strong>
 <% end -%>
 
 <% content_for :main do %>
   <div class="grid">
     <div class="grid-header">
-      <h2>Events</h2>
+      <h2>Species</h2>
       <ul>
-        <li><%= link_to "+ Add New", new_admin_event_path %></li>
+        <li><%= link_to "+ Add New", new_admin_species_path %></li>
       </ul>
     </div>
     <div class="grid-body">
       <table>
         <thead>
           <tr>
-            <th width="70%">Event</th>
+            <th width="70%">Species</th>
             <th width="20%">Code</th>
             <th width="10%">In Model</th>
           </tr>
         </thead>
         <tbody>
-          <% unless @events.empty? %>
-            <% @events.each do |event| -%>
+          <% unless @species.empty? %>
+            <% @species.each do |species| -%>
               <tr class="<%= cycle('odd', 'even') %>">
-                <td><%= link_to event.name, edit_admin_event_path(event) %></td>
-                <td><%= event.code %></td>
+                <td><%= link_to species.name, edit_admin_species_path(species) %></td>
+                <td><%= species.code %></td>
                 <td>
-                  <% if event.in_model %>
+                  <% if species.in_model %>
                     <span class="yes">YES</span>
                   <% else %>
                     <span class="no">NO</span>
@@ -37,7 +37,7 @@
             <% end -%>
           <% else -%>
             <tr>
-              <td colspan="3">There are no events</td>
+              <td colspan="3">There are no species</td>
             </tr>
           <% end -%>
         </tbody>
