--- a/app/views/admin/observations/index.html.erb
+++ b/app/views/admin/observations/index.html.erb
@@ -4,7 +4,13 @@
 <% end -%>
 
 <% content_for :main do %>
-  <div class="grid" id="locations">
+  <div class="grid" id="locations_<%= params[:type] %>">
+    <div class="grid-prefix">
+      <ul class="types">
+        <li><%= link_to_type 'List', admin_observations_path, 'list' %></li>
+        <li><%= link_to_type 'Grid', admin_observations_path, 'grid' %></li>
+      </ul>    
+    </div>
     <div class="grid-header">
       <h2>Observations</h2>
       <ul>
@@ -12,30 +18,59 @@
       </ul>
     </div>
     <div class="grid-body">
-      <table>
-        <thead>
-          <tr>
-            <th width="45%">Species</th>
-            <th width="45%">Event</th>
-            <th width="10%">Value</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% unless @observations.empty? %>
-            <% @observations.each do |observation| %>
-              <tr class="<%= cycle('odd', 'even') %>">
-                <td><%= observation.species.name %></td>
-                <td><%= observation.event.name %></td>
-                <td><%= link_to observation.value, edit_admin_observation_path(observation) %></td>
+      <% if params[:type] == 'grid' %>
+        <table>
+          <thead>
+            <tr>
+              <th width="30%">Event</th>
+              <% width = 70 / @species.count %>
+              <% @species.each do |species| %>
+                <th width="<%= width %>%"><%= species.name %></th>
+              <% end %>
+            </tr>
+          </thead>
+          <tbody>
+            <% @events.each do |event| %>
+              <tr>
+                <th><%= event.name %></th>
+                <% @species.each do |species| %>
+                  <% if @grid.has_key?(species.id) && @grid[species.id].has_key?(event.id) %>
+                    <% observation = @grid[species.id][event.id] %>
+                    <td><%= link_to observation.value, edit_admin_observation_path(observation) %></td>
+                  <% else %>
+                    <td>&nbsp;</td>
+                  <% end %>
+                <% end %>
+              </tr>
+            <% end %>
+          </tbody>          
+        </table>
+      <% else %>
+        <table>
+          <thead>
+            <tr>
+              <th width="45%">Species</th>
+              <th width="45%">Event</th>
+              <th width="10%">Value</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% unless @observations.empty? %>
+              <% @observations.each do |observation| %>
+                <tr class="<%= cycle('odd', 'even') %>">
+                  <td><%= observation.species.name %></td>
+                  <td><%= observation.event.name %></td>
+                  <td><%= link_to observation.value, edit_admin_observation_path(observation) %></td>
+                </tr>
+              <% end -%>
+            <% else -%>
+              <tr>
+                <td colspan="3">There are no observations</td>
               </tr>
             <% end -%>
-          <% else -%>
-            <tr>
-              <td colspan="3">There are no observations</td>
-            </tr>
-          <% end -%>
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      <% end %>
     </div>
     <div class="grid-footer">
     </div>
