--- a/app/assets/stylesheets/admin/grid.css.scss
+++ b/app/assets/stylesheets/admin/grid.css.scss
@@ -1,4 +1,22 @@
+@mixin rounded($tl, $tr, $br, $bl) {
+  -moz-border-radius: $tl $tr $br $bl;
+  -webkit-border-radius: $tl $tr $br $bl;
+  border-radius: $tl $tr $br $bl;
+}
+
 div.grid {
+  div.grid-prefix {
+    overflow: hidden; margin: 0 0 5px; text-align: right;
+    ul.types {
+      overflow: hidden; float: right; background-color: #FFF; @include rounded(3px,3px,3px,3px); border: 1px solid #CCC;
+      li { float: left; padding: 0; }
+      a { padding: 0 0 0 5px; border-right: 1px solid #CCC; padding: 3px 15px; display: block; color: #BBB; font-weight: bold; }
+      &>:last-child a { border-right: none; }
+      a.selected { background-color: #EEE; color: #000; }
+    }
+    label { font-weight: bold; cursor: pointer; }
+    select { padding: 5px; border: 1px solid #CCC; }
+  }
   div.grid-header {
     background-color: #333; padding: 5px 10px; overflow: hidden;
     h2 { float: left; color: #FFF; font-size: 12px; line-height: 22px; }
@@ -16,9 +34,18 @@ div.grid {
     tr.even {
       td, th { background-color: #FFFFFF; }
     }
-    thead th { background-color: #DDDDDD; }
+    thead th { background-color: #DDDDDD;  }
     td span.yes { background: url(/assets/check.png) no-repeat center; display: block; text-indent: -9999px; }
     td span.no { display: block; text-indent: -9999px; }
+    tbody td.subitem { padding: 5px 5px 5px 20px; }
   }
   div.grid-footer {}
+}
+
+
+div#locations_grid {
+  div.grid-body {
+    thead th { vertical-align: bottom; text-align: center; }
+    tbody td { vertical-align: middle; text-align: center; }
+  }
 }
