Adding classifications to species and processes to events

--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -8,7 +8,7 @@
   <%= form_for @event, { :url => admin_events_path } do |f| -%>
     <div class="form" id="new_event">
       <div class="form-header">
-        <h2>event Details</h2>
+        <h2>Event Details</h2>
       </div>
       <div class="form-body">
         <dl>
