--- a/app/assets/stylesheets/admin/form.css.scss
+++ b/app/assets/stylesheets/admin/form.css.scss
@@ -21,9 +21,9 @@ div.form {
     h2 { float: left; color: #FFF; font-size: 12px; line-height: 22px; }
   }
   div.form-body {
-    padding: 10px; 
+    h2 { background-color: #333; color: #FFF; padding: 5px 10px; font-size: 12px; line-height: 22px; }
     dt, dd { float: left; margin: 0 0 10px; }
-    dl { overflow: hidden; }
+    dl { overflow: hidden; padding: 10px; }
     dt { clear: both; width: 150px; font-weight: bold; }
     dd { width: 450px; }
     label { cursor: pointer; }
