--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= f.text_field_control @event, :name %>
+<%= f.text_field_control @event, :name, { :required => true } %>
 
 <%= f.text_field_control @event, :code %>
 
@@ -6,6 +6,9 @@
 
 <% options = options_from_collection_for_select(Location.order("name ASC").all, :id, :name, @event.location_id) %>
 <%= f.select_control @event, :location_id, {}, { :include_blank => '', :options => options } %>
+
+<% options = options_from_collection_for_select(Proces.order("name ASC").all, :id, :name, @event.process_id) %>
+<%= f.select_control @event, :process_id, {}, { :include_blank => '', :options => options } %>
 
 <%= f.text_area_control @event, :description, {}, { :rows => 5 } %>
 
