--- a/app/views/notification/welcome.text.erb
+++ b/app/views/notification/welcome.text.erb
@@ -1,4 +1,8 @@
 Welcome!
 
+URL: http://translatingtime.net
+EMAIL: <%= @user.email %>
+PASSWORD: <%= @user.password %>
+
 Sincerely,
 Translating Time
