--- a/app/views/admin/methods/index.html.erb
+++ b/app/views/admin/methods/index.html.erb
@@ -6,7 +6,7 @@
 <% content_for :main do %>
   <div class="grid">
     <div class="grid-header">
-      <h2>mMthods</h2>
+      <h2>Methods</h2>
       <ul>
         <li><%= link_to "+ Add New", new_admin_method_path %></li>
       </ul>
