--- a/app/assets/stylesheets/admin/form.css.scss
+++ b/app/assets/stylesheets/admin/form.css.scss
@@ -24,12 +24,19 @@ div.form {
     h2 { background-color: #333; color: #FFF; padding: 5px 10px; font-size: 12px; line-height: 22px; }
     dt, dd { float: left; margin: 0 0 10px; }
     dl { overflow: hidden; padding: 10px; }
+    p { padding: 10px; }
     dt { clear: both; width: 150px; font-weight: bold; }
     dd { width: 450px; }
     label { cursor: pointer; }
     label.required { background: url(/assets/required.png) no-repeat right 0; padding: 0 15px 0 0; }
-    input[type="text"], input[type="password"], input[type="email"], textarea { padding: 5px; border: 1px solid #CCC; width: 430px; }
-    select { padding: 5px; border: 1px solid #CCC; width: 442px; }
+    input[type="text"], input[type="password"], input[type="email"], textarea {
+      padding: 5px; border: 1px solid #CCC; width: 430px;
+      &:focus { background-color: #FFD; }
+    }
+    select {
+      padding: 5px; border: 1px solid #CCC; width: 442px;
+      &:focus { background-color: #FFD; }
+    }
     div.error_description { color: #900; margin: 0 0 10px; }
     div.field_with_errors {
       display: inline;
