--- a/app/views/admin/processes/_form.html.erb
+++ b/app/views/admin/processes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= f.text_field_control @process, :name, { :required => true } %>
 
-<%= f.text_field_control @process, :code, { :required => true } %>
+<%= f.text_field_control @process, :code %>
 
-<%= f.text_field_control @process, :value, { :required => true } %>
+<%= f.text_field_control @process, :value %>
 
 <%= f.text_area_control @process, :description, {}, { :rows => 5 } %>
