--- a/app/views/admin/taxonomies/edit.html.erb
+++ b/app/views/admin/taxonomies/edit.html.erb
@@ -1,14 +1,14 @@
 <% content_for :breadcrumbs do -%>
   <%= link_to 'Dashboard', admin_dashboard_path %> &raquo;
-  <%= link_to 'Events', admin_events_path %> &raquo;
-  <strong>Edit Event</strong>
+  <%= link_to 'Taxonomies', admin_taxonomies_path %> &raquo;
+  <strong>Edit Taxonomy</strong>
 <% end -%>
 
 <% content_for :main do %>
-  <%= form_for @event, { :url => admin_event_path(@event) } do |f| -%>
-    <div class="form" id="new_event">
+  <%= form_for @taxonomy, { :url => admin_taxonomy_path(@taxonomy) } do |f| -%>
+    <div class="form" id="new_taxonomy">
       <div class="form-header">
-        <h2>Event Details</h2>
+        <h2>Taxonomy Details</h2>
       </div>
       <div class="form-body">
         <dl>
@@ -17,7 +17,7 @@
       </div>
       <div class="form-footer">
         <ul>
-          <li><%= link_to 'Cancel', admin_events_path, :class => 'cancel' %></li>
+          <li><%= link_to 'Cancel', admin_taxonomies_path, :class => 'cancel' %></li>
           <li><%= f.submit 'Save', :class => 'button' %></li>
         </ul>
       </div>
