--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <presence>
       <strong><%= current_user.full_name -%></strong>
       <ul>
-        <li><%= link_to 'Settings', user_session_path %></li>
+        <li><%= link_to 'Settings', edit_admin_account_path %></li>
         <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
       </ul>
       
