--- a/app/assets/stylesheets/admin/grid.css.scss
+++ b/app/assets/stylesheets/admin/grid.css.scss
@@ -20,6 +20,10 @@ div.grid {
   div.grid-header {
     background-color: #333; padding: 5px 10px; overflow: hidden;
     h2 { float: left; color: #FFF; font-size: 12px; line-height: 22px; }
+    div.actions {
+      padding: 0 0 0 20px; background: url(/assets/arrow.gif) no-repeat 2px 8px; float: left;
+      optgroup option { padding: 0 0 0 10px; }
+    }
     ul { float: right; overflow: hidden; }
     li { float: left; margin: 0 0 0 10px; }
     a { color: #FFF; }
