--- a/app/assets/stylesheets/admin/layout.css.scss
+++ b/app/assets/stylesheets/admin/layout.css.scss
@@ -19,7 +19,7 @@ breadcrumbs {
   display: block; padding: 10px 20px 0; font-size: 11px;
 }
 application {
-  display: block; padding: 20px; width: 960px;
+  display: block; padding: 20px;
 }
 section {
   margin: 0 0 10px;
