building our CRM components

--- a/app/assets/stylesheets/admin/form.css.scss
+++ b/app/assets/stylesheets/admin/form.css.scss
@@ -50,3 +50,6 @@ div.form {
     li { float: left; margin: 0 0 0 10px; }
   }
 }
+
+input#page_permalink { width: 272px; }
+input#menu_item_url { width: 272px; }
