--- a/app/views/site/feedback.html.erb
+++ b/app/views/site/feedback.html.erb
@@ -1,6 +1,6 @@
 <% content_for :content do %>
 
-  <%= form_for @inquiry, { :url => contact_path } do |f| -%>
+  <%= form_for @inquiry, { :url => feedback_path } do |f| -%>
 
     <div class="form">
       <div class="form-header">
