--- a/app/views/site/403.html.erb
+++ b/app/views/site/403.html.erb
@@ -1,8 +1,4 @@
-<% content_for :breadcrumbs do %>
-  <strong>401 Not Authroized</strong>
-<% end %>
-
-<% content_for :main do %>
+<% content_for :content do %>
   <h1>403 Not Authorized</h1>
   <p>You do not have access to this resource.</p>
 <% end %>
