--- a/app/views/site/404.html.erb
+++ b/app/views/site/404.html.erb
@@ -1,8 +1,4 @@
-<% content_for :breadcrumbs do %>
-  <strong>404 Not Found</strong>
-<% end %>
-
-<% content_for :main do %>
+<% content_for :content do %>
   <h1>404 Not Found</h1>
   <p>Sorry, we could not find this resource</p>
 <% end %>
