--- a/app/assets/stylesheets/admin/form.css.scss
+++ b/app/assets/stylesheets/admin/form.css.scss
@@ -1,3 +1,12 @@
+body#tinymce {
+  background: #FFF;
+  p { font-size: 12px; line-height: 20px; margin: 0 0 10px; }
+  li { font-size: 12px; line-height: 20px; padding: 0; margin: 0; }
+  ul, ol { padding: 0 0 0 20px; margin: 0 0 10px; }
+  ul li { list-style: disc; }
+  ol li { list-style: decimal; }
+}
+
 div.flash {
   overflow: hidden; min-height: 10px; color: #666; margin: 0 0 10px; padding: 5px 25px 5px 30px;position: relative;
   span { position: absolute; top: 5px; right: 5px; padding: 4px; cursor: pointer; font-size: 12px; line-height: 12px; }
@@ -43,6 +52,7 @@ div.form {
       label { color: #900; }
       select, textarea, input { border: 1px solid #900 !important; background-color: #FEE !important; }
     }
+    span.togglemce { color: #4183C4; cursor: pointer; display: block; }
   }
   div.form-footer {
     background-color: #BBB; padding: 5px 10px; overflow: hidden;
