--- a/app/assets/stylesheets/site/reset.css.scss
+++ b/app/assets/stylesheets/site/reset.css.scss
@@ -4,9 +4,9 @@ body { font-family: lucida grande,tahoma,verdana,arial,sans-serif; font-size: 12
 body.waiting { cursor: wait; }
 textarea {font-family: lucida grande,tahoma,verdana,arial,sans-serif;}
 img { border: none; }
-a { text-decoration: none; outline: none; color: #00C; }
+a { text-decoration: none; outline: none; color: #770; }
 a:hover { color: #C00; }
-p, input, textarea, select, dt, dd, li, td, th { font-size: 12px; line-height: 22px; }
+p, input, textarea, select, dt, dd, li, td, th { font-size: 12px; line-height: 18px; color: #666; }
 textarea { font-size: 12px; line-height: 22px; }
 li { font-size: 12px; line-height: 22px; }
 ol li { list-style-type: decimal; margin: 0 0 0 20px; }
