--- a/app/assets/stylesheets/admin/form.css.scss
+++ b/app/assets/stylesheets/admin/form.css.scss
@@ -1,6 +1,8 @@
 body#tinymce {
   background: #FFF;
+  h2 { margin: 0 0 20px; font-size: 26px; color: #252323; font-weight: normal; }
   p { font-size: 12px; line-height: 20px; margin: 0 0 10px; }
+  a { text-decoration: none; outline: none; color: #770; }
   li { font-size: 12px; line-height: 20px; padding: 0; margin: 0; }
   ul, ol { padding: 0 0 0 20px; margin: 0 0 10px; }
   ul li { list-style: disc; }
