--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Translating Time</title>
   <%= stylesheet_link_tag  "site", :media => "all" %>
+  <link rel="shortcut icon" href="/assets/favicon.ico" />
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
